# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.MD  README.customization.md  README.md  main.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: README.md  ci.yml
app/: create_app.py
app/api/: deps.py
app/api/v1/: routes.py
app/domain/: customer.py
app/repositories/: customer_repository.py
app/services/: auth_service.py
docker/: build.Dockerfile  test.Dockerfile
scripts/: rename-template.ps1  rename-template.sh
scripts/ubuntu/: test.sh
scripts/windows/: test.ps1
tests/docker/: test_with_curl.ps1  test_with_curl.sh
tests/e2e/: test_api.py
tests/unit/: test_auth_service.py  test_customer_service.py
